# tm_updater

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml  updater.toml
docs/: CHANGELOG.md  README_ZH.md  RELEASE_NOTES.md  RELEASE_NOTES_ZH.md
docs/superpowers/plans/: 2026-04-22-updater-gui-launcher.md  2026-04-23-version-selection-implementation.md
docs/superpowers/specs/: 2026-04-22-updater-gui-launcher-design.md  2026-04-23-version-selection-feature-design.md
docs/superpowers/verification/: 2026-04-23-version-selection-manual-testing.md
scripts/: build_all.bat  build_gui.bat  build_updater.bat  update_version.py
src/updater/: __init__.py  config.py  core.py  launcher.py  main.py
src/updater/gui/: __init__.py  app.py  updater.toml
src/updater/gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/updater/gui/frontend/src/: App.vue  main.js
src/updater/gui/frontend/src/components/: ActionPanel.vue  LogConsole.vue  PackageTable.vue  VersionConfirmModal.vue
src/updater/gui/frontend/src/components/__tests__/: ActionPanel.spec.js  PackageTable.refresh.spec.js  VersionConfirmModal.spec.js  main.spec.js
src/updater/gui/frontend/src/themes/: blueprint.css
tests/: mock_app.py  test_config.py  test_core.py  test_gui.py  test_launcher.py  test_version_downgrade_integration.py  test_version_selection.py
tests/happy_test/: test_happy_cli.py  test_happy_config.py  test_happy_core.py  test_happy_gui_bridge.py  test_happy_launcher.py
